<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    tools:context="dafla.dafla.SignUpActivity"
    android:background="@color/whiteV1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="8dp"
    tools:layout_editor_absoluteX="8dp">

    <!--include
        layout="@layout/app_bar"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true" /-->

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/picture"
        android:layout_centerHorizontal="true">
        <!--android:layout_below="@+id/app_bar"-->
        <ImageView
            android:id="@+id/picimage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/picture"/>

    </LinearLayout> <!--Picture profile -->

    <LinearLayout
        android:id="@+id/area_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picture"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/profile"
            android:contentDescription="@string/des_name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mav_name"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout> <!--Name Input -->

    <LinearLayout
        android:id="@+id/area_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_name"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/username"
            android:contentDescription="@string/des_username" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/text_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mav_username"
                android:inputType="textAutoComplete"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout> <!--Username Input -->

    <LinearLayout
        android:id="@+id/area_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_user"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/email"
            android:contentDescription="@string/des_email" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/text_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mav_emailText"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout> <!--Email Input -->

    <LinearLayout
        android:id="@+id/area_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_mail"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/password"
            android:contentDescription="@string/des_passText" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mav_passText"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout> <!--Password Input -->

    <LinearLayout
        android:id="@+id/area_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_password"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/phone"
            android:contentDescription="@string/des_phone" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/mav_phone"
                android:inputType="phone"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout> <!--Phone number Input -->

    <LinearLayout
        android:id="@+id/area_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/area_phone"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/des_birth"
            android:src="@drawable/birth" />

        <Button
            android:id="@+id/bbirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/mav_birth_button"
            android:textColor="@color/greyV1"/>

        <EditText
            android:id="@+id/tbirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mav_birth"
            android:maxLines="1" />

    </LinearLayout> <!--Birthday Input -->

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@+id/area_birth"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/join_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:text="@string/mav_join"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle"
            android:background="@drawable/button_border_join"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mav_cancel"
            android:textAlignment="center" />
    </LinearLayout>


</RelativeLayout>

