<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/log_in_activity"
    tools:context="dafla.dafla.LogInActivity">

    <ImageView
        android:id="@+id/icon"
        android:background="@drawable/icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription=""
        android:layout_marginTop="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/icon"
        android:id="@+id/login_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/labelWhite">
        <EditText
            android:id="@+id/login_email"
            android:hint="@string/mav_emailText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/login_input_email"
        android:id="@+id/login_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/labelWhite">
        <EditText
            android:id="@+id/login_password"
            android:hint="@string/mav_passText"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_below="@+id/login_input_password"
        android:id="@+id/login_btn_sign_up"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/mav_signupText"
        android:textColor="@color/whiteV1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps= "false"/>
    <!--com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/login_btn_sign_up"
        android:layout_centerHorizontal="true" /-->
    <com.google.android.gms.common.SignInButton
        android:layout_below="@+id/login_btn_sign_up"
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/login_btn_login"
        android:text="@string/mav_loginText"
        android:background="@drawable/button_border_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps= "false"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/sign_in_button"
        android:layout_alignStart="@+id/login_btn_sign_up"
        android:layout_alignEnd="@+id/login_btn_sign_up" />
    <TextView
        android:id="@+id/login_btn_forgot_password"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/mav_forgotPassText"
        android:textColor="@color/whiteV1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps= "false"
        android:layout_below="@+id/login_btn_login"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
